@@ -1,0 +1,22 @@
+.Rhistory
+.Data
+00-FIXME
+He-example
+INDEX-manual
+cobs_cs.ps
+ls-l.orig
+tests/ex1.Rout-dbg
+tests/.*-N-.*
+tests/.*.Rout.save-[3264].*
+tests/swaplink-.*
+SAFE
+paper
+Archive
+check-.*
+do-.*
+.*[-.]Pin.*
+.*mail
+.*\.out
+.*,v
+.*-ss
+
