@@ -1,14 +1,18 @@
-DublinWind               Daily Wind Speeds in Dublin
-USArmyRoofs              Dataset on Roof Quality
-cobs-internal            Internal COBS functions
-cobs-methods             Methods for COBS Objects
 cobs                     COnstrained B-Splines Nonparametric Regression
                          Quantiles
 cobsOld                  COnstrained B-Splines Nonparametric Regression
-                         Quantiles
-drqssbc                  Regression Quantile Smoothing Spline with
-                         Constraints
+                         Quantiles --- old (original) version
+cobs-internal            Internal COBS functions
+cobs-methods             Methods for COBS Objects
+predict.cobs             Predict method for COBS Fits
+
+drqssbc                  Regression Quantile Smoothing Spline with Constraints
+qbsks                    Quantile B-Spline with Fixed Knots
+
+	DATA SETS
+
+DublinWind               Daily Wind Speeds in Dublin
+USArmyRoofs              Dataset on Roof Quality
 exHe                     Small Dataset Example of He
 globtemp                 Global Temperature Data
-predict.cobs             Predict method for COBS Fits
-qbsks                    ~~function to do ... ~~
+
